ws_controller/log/build_2025-08-21_13-39-21/flight_controller_pkg/stderr.log
  File "/home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg/fc_control.py", line 702
    if missionStatus.elapsed > 0.95 * missionStatus.duration and missionStatus.elapsed < 1.2 * missionStatus.duration
                                                                                                                     ^
SyntaxError: expected ':'

